--- a/.gitignore
+++ b/.gitignore
@@ -101,9 +101,16 @@ ENV/
 .mypy_cache/
 
 db.sqlite3
-workspace.xml
+
 tasks.xml
 
 media/icons
 challenges/migrations
 static/
+
+#PyCharm files
+.idea/deployment.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
