--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ db.sqlite3
 tasks.xml
 
 media/icons
+media/inventory
 */migrations
 static/
 
@@ -114,3 +115,5 @@ static/
 .idea/modules.xml
 .idea/vcs.xml
 .idea/workspace.xml
+
+db.conf
